--- a/style.css
+++ b/style.css
@@ -1,17 +1,50 @@
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 main {
     width: 300px;
     height: auto;
     text-align: right;
     font-size: 24px;
+    background-color: silver;
+    padding: 15px;
+    border-radius: 15px;
 }
 
 button {
-    width: 40px;
+    width: 70px;
+    height: 50px;
+    margin-bottom: 5px;
+    font-size: 24px;
+    border-radius: 15px;
+}
+
+#equal-button {
+    background-color: skyblue;
+}
+
+#zero-button {
+    width: 220px;
+}
+
+#clear-all-button {
+    background-color: orange;
+    width: 106px;
+}
+
+#clear-button {
+    background-color: skyblue;
+    width: 106px;
 }
 
 #display {
-    padding: 0;
+    background-color: white;
+    margin-bottom: 10px;
+    padding-right: 5px; 
     font-family: sans-serif;
-    font-size: 32px;
+    width: 295px;
+    font-size: 42px;
     border: solid 1px black;
+    border-radius: 15px;
 }
